--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,9 @@ training:
   epochs: 10
   batch_size: 32
   patience: 25
+  num_runs: 1
+  eval_every: 2
+  es_metric: ["Top1_Acc_Stream", "Loss_Stream"]
 
 model:
   type: "CNN"
@@ -19,8 +22,11 @@ scenario:
   mini: True
   object_lvl: False
 
-
 wandb:
   use_wandb: True
   project_name: "Avalanche-CL-Experiment"
   entity: "myusername"
+
+project:
+  name: ""
+  group_name: ""
