--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ training:
 model:
   type: "CNN"
   layers: [64, 128, 256]
-  n_classes: 10
+  num_classes: 10
 
 dataset: 
   name: "core50"
@@ -24,8 +24,8 @@ scenario:
 
 wandb:
   use_wandb: True
-  project_name: "Avalanche-CL-Experiment"
-  entity: "myusername"
+  project_name: "CL-Research"
+  entity: "Bard"
 
 project:
   name: ""
