--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 training:
-  learning_rate: 0.001
-  epochs: 10
-  batch_size: 32
+  learning_rate: 0.1
+  epochs: 1
+  batch_size: 1024
   patience: 25
   num_runs: 1
   eval_every: 2
@@ -18,7 +18,7 @@ dataset:
   validation_fraction: 0.2
 
 scenario:
-  type: "nc"
+  type: ["nc", "ni"]
   mini: True
   object_lvl: False
 
