--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 training:
-  learning_rate: 0.1
-  epochs: 1
-  batch_size: 1024
+  learning_rate: 0.001
+  epochs: 200
+  batch_size: 128
   patience: 25
   num_runs: 1
   eval_every: 2
@@ -13,7 +13,7 @@ model:
   num_classes: 10
 
 dataset: 
-  name: "core50"
+  name: ["core50", "splitmnist", "splitcifar10"]
   fraction_to_take: 0.2
   validation_fraction: 0.2
 
@@ -21,6 +21,7 @@ scenario:
   type: ["nc", "ni"]
   mini: True
   object_lvl: False
+  num_experiences: 10
 
 wandb:
   use_wandb: True
