Adds intruction for metrics extraction and gets rid of the rubbish that was generated by trying to upload graphs to wandb

--- a/config.yaml
+++ b/config.yaml
@@ -29,3 +29,4 @@ wandb:
 
 wandb_metrics_extraction:
   folder_name: "metrics_extraction"
+  group_names: ["core50_nc_2024-01-26 21:28:24.151638", "core50_nc_2024-01-28 23:48:28.467730"]
